--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,28 +6,24 @@
   booktitle={2024 IEEE 9th European Symposium on Security and Privacy (EuroS&P)}, 
   title={Learning-Based Difficulty Calibration for Enhanced Membership Inference Attacks}, 
   year={2024},
-  volume={},
-  number={},
-  pages={62-77},
-  keywords={Training;Data privacy;Costs;Finance;Medical services;Machine learning;Artificial neural networks},
+  pdf={assets/pdf/LDC-MIA.pdf},
+  arxiv={https://arxiv.org/abs/2401.04929},
   doi={10.1109/EuroSP60621.2024.00012}}
 
 @misc{shi2025navigatingdesignsprivacypreservingfinetuning,
+      booktitle={International World Wide Web Conference 2025 (WWW 2025)},
       title={Navigating the Designs of Privacy-Preserving Fine-tuning for Large Language Models}, 
       author={Haonan Shi and Tu Ouyang and An Wang},
       year={2025},
-      eprint={2501.04323},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
-      url={https://arxiv.org/abs/2501.04323}, 
+      pdf={assets/pdf/GuardedTuning.pdf},
+      arxiv={https://arxiv.org/abs/2501.04323},
 }
 
 @misc{yu2023trajectorykanonymitymodelbased,
+      booktitle={Arxiv},
       title={A Trajectory K-Anonymity Model Based on Point Density and Partition}, 
       author={Wanshu Yu and Haonan Shi and Hongyun Xu},
       year={2023},
-      eprint={2307.16849},
-      archivePrefix={arXiv},
-      primaryClass={cs.CR},
-      url={https://arxiv.org/abs/2307.16849}, 
+      pdf={assets/pdf/KPDP.pdf},
+      arxiv={https://arxiv.org/abs/2307.16849},
 }
