--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,24 +6,24 @@
   booktitle={2024 IEEE 9th European Symposium on Security and Privacy (EuroS&P)}, 
   title={Learning-Based Difficulty Calibration for Enhanced Membership Inference Attacks}, 
   year={2024},
-  pdf={assets/pdf/LDC-MIA.pdf},
-  arxiv={https://arxiv.org/abs/2401.04929},
+  pdf={LDC-MIA.pdf},
+  arxiv={2401.04929},
   doi={10.1109/EuroSP60621.2024.00012}}
 
-@misc{shi2025navigatingdesignsprivacypreservingfinetuning,
+@INPROCEEDINGS{shi2025navigatingdesignsprivacypreservingfinetuning,
       booktitle={International World Wide Web Conference 2025 (WWW 2025)},
       title={Navigating the Designs of Privacy-Preserving Fine-tuning for Large Language Models}, 
       author={Haonan Shi and Tu Ouyang and An Wang},
       year={2025},
-      pdf={assets/pdf/GuardedTuning.pdf},
-      arxiv={https://arxiv.org/abs/2501.04323},
+      pdf={GuardedTuning.pdf},
+      arxiv={2501.04323},
 }
 
-@misc{yu2023trajectorykanonymitymodelbased,
+@INPROCEEDINGS{yu2023trajectorykanonymitymodelbased,
       booktitle={Arxiv},
       title={A Trajectory K-Anonymity Model Based on Point Density and Partition}, 
       author={Wanshu Yu and Haonan Shi and Hongyun Xu},
       year={2023},
-      pdf={assets/pdf/KPDP.pdf},
-      arxiv={https://arxiv.org/abs/2307.16849},
+      pdf={KPDP.pdf},
+      arxiv={2307.16849},
 }
