--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   year={2024},
   pdf={LDC-MIA.pdf},
   arxiv={2401.04929},
+  preview={LDC-MIA.png},
   doi={10.1109/EuroSP60621.2024.00012}}
 
 @INPROCEEDINGS{shi2025navigatingdesignsprivacypreservingfinetuning,
@@ -16,6 +17,7 @@
       author={Haonan Shi and Tu Ouyang and An Wang},
       year={2025},
       pdf={GuardedTuning.pdf},
+      preview={GuardedTuning.png},
       arxiv={2501.04323},
 }
 
@@ -25,5 +27,6 @@
       author={Wanshu Yu and Haonan Shi and Hongyun Xu},
       year={2023},
       pdf={KPDP.pdf},
+      preview={KPDP.png}
       arxiv={2307.16849},
 }
