--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,6 +27,6 @@
       author={Wanshu Yu and Haonan Shi and Hongyun Xu},
       year={2023},
       pdf={KPDP.pdf},
-      preview={KPDP.png}
+      preview={KPDP.png},
       arxiv={2307.16849},
 }
