--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,9 @@
   pdf={LDC-MIA.pdf},
   arxiv={2401.04929},
   preview={LDC-MIA.png},
-  doi={10.1109/EuroSP60621.2024.00012}}
+  doi={10.1109/EuroSP60621.2024.00012},
+  publisher={EuroS&P}
+}
 
 @INPROCEEDINGS{shi2025navigatingdesignsprivacypreservingfinetuning,
       booktitle={International World Wide Web Conference 2025 (WWW 2025)},
@@ -19,6 +21,7 @@
       pdf={GuardedTuning.pdf},
       preview={GuardedTuning.png},
       arxiv={2501.04323},
+      publisher={WWW}
 }
 
 @INPROCEEDINGS{yu2023trajectorykanonymitymodelbased,
@@ -28,5 +31,5 @@
       year={2023},
       pdf={KPDP.pdf},
       preview={KPDP.png},
-      arxiv={2307.16849},
+      arxiv={2307.16849}
 }
