--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,18 +10,20 @@
   arxiv={2401.04929},
   preview={LDC-MIA.png},
   doi={10.1109/EuroSP60621.2024.00012},
-  publisher={EuroS&P}
+  journal={EuroS&P},
+  selected={true}
 }
 
 @INPROCEEDINGS{shi2025navigatingdesignsprivacypreservingfinetuning,
-      booktitle={International World Wide Web Conference 2025 (WWW 2025)},
+      booktitle={International World Wide Web Conference 2025 (WWW 2025(short paper))},
       title={Navigating the Designs of Privacy-Preserving Fine-tuning for Large Language Models}, 
       author={Haonan Shi and Tu Ouyang and An Wang},
       year={2025},
       pdf={GuardedTuning.pdf},
       preview={GuardedTuning.png},
       arxiv={2501.04323},
-      publisher={WWW}
+      journal={WWW},
+      selected={true}
 }
 
 @INPROCEEDINGS{yu2023trajectorykanonymitymodelbased,
