--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,8 @@
   preview={LDC-MIA.png},
   doi={10.1109/EuroSP60621.2024.00012},
   journal={EuroS&P},
-  selected={true}
+  selected={true},
+  abbr={EuroS&P}
 }
 
 @INPROCEEDINGS{shi2025navigatingdesignsprivacypreservingfinetuning,
@@ -22,12 +23,12 @@
       pdf={GuardedTuning.pdf},
       preview={GuardedTuning.png},
       arxiv={2501.04323},
-      journal={WWW},
+      abbr={WWW},
       selected={true}
 }
 
 @INPROCEEDINGS{yu2023trajectorykanonymitymodelbased,
-      booktitle={Arxiv},
+      abbr={Arxiv},
       title={A Trajectory K-Anonymity Model Based on Point Density and Partition}, 
       author={Wanshu Yu and Haonan Shi and Hongyun Xu},
       year={2023},
