--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,6 +28,7 @@
 }
 
 @INPROCEEDINGS{yu2023trajectorykanonymitymodelbased,
+      booktitle={Arxiv},
       abbr={Arxiv},
       title={A Trajectory K-Anonymity Model Based on Point Density and Partition}, 
       author={Wanshu Yu and Haonan Shi and Hongyun Xu},
