--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,3 +37,13 @@
       preview={KPDP.png},
       arxiv={2307.16849}
 }
+
+@INPROCEEDINGS{shi2025unveilingclientprivacyleakage,
+      booktitle={Arxiv},
+      abbr={Arxiv},
+      title={Unveiling Client Privacy Leakage from Public Dataset Usage in Federated Distillation}, 
+      author={Haonan Shi and Tu Ouyang and An Wang},
+      year={2025},
+      pdf={FD_Privacy.pdf},
+      preview={FD_Privacy_MIA.pdf},
+}
