--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,5 +45,5 @@
       author={Haonan Shi and Tu Ouyang and An Wang},
       year={2025},
       pdf={FD_Privacy.pdf},
-      preview={FD_Privacy_MIA.pdf},
+      preview={FD_Privacy_MIA.png},
 }
